--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -341,7 +341,8 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 }
 .skill-bx {
   /*background-image: radial-gradient(circle at 12.5% 12.5%, #b547ff 0, #803bff 25%, #0033ff 50%, #0031fe 75%, #0033fd 100%);*/ /*/////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////*/
-  background-color: #7E42D9;
+  background-image: radial-gradient(circle at 50% -20.71%, #d0afff 0, #ad97fe 25%, #8080f6 50%, #3c6bee 75%, #005be7 100%);  
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
   border-radius: 64px;
   text-align: center;
   padding: 60px 50px;
@@ -382,8 +383,10 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 .project {
   padding: 80px 0;
   position: relative;
-  background-color: #D6CFFF;/*/////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////*/
+  background-image: radial-gradient(circle at 58.66% 17.68%, #ae50d8 0, #9848d8 25%, #7e42d9 50%, #5d3dda 75%, #283ada 100%);
+
 }
+  
 .project h2 {
 	font-size: 45px;
 	font-weight: 700;
@@ -452,6 +455,7 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   border-radius: 0 55px 55px 0;
 }
 .proj-imgbx {
+  box-shadow: rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset, rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset, rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset, rgba(0, 0, 0, 0.06) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
   position: relative;
   border-radius: 30px;
   overflow: hidden;
